--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,7 +25,7 @@ jobs:
         with:
           args: --delete #removes files from s3 that are no longer exist
         env:
-          AWS_S3_BUCKET: my-react-app456
+          AWS_S3_BUCKET: abhi-jay-portfolio-website
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           SOURCE_DIR: "dist"
